--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
   <head>
     <meta charset="utf-8" />
     <title>Shawn's Personal Page</title>
+    <style>
+        body {
+            background-color:lightsteelblue;
+        }
+
+        hr {
+            border-style: none;
+            border-top: 5px dotted white;
+            width: 6%;
+        }
+    </style>
   </head>
-  <body style="background-color:#EAF6F6;">
-    <table cellspacing="20">
+  <body>
+    <table cellspacing="5">
       <tr>
-        <td>
-          <img src="images/profile-pic.png" alt="Shawn's Profile Picture" />
+        <td width="25%">
+          <img src="images/profile-pic.png" alt="Shawn's Profile Picture" width="50%" height="auto">
         </td>
         <td>
           <h1>Shawn Dupee</h1>
