--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Shawn's Personal Page</title>
-    <style>
-        body {
-            background-color:lightsteelblue;
-        }
-
-        hr {
-            border-style: none;
-            border-top: 5px dotted white;
-            width: 6%;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styls.css">
   </head>
   <body>
     <table cellspacing="5">
